--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ section { padding: 2rem 1rem; }
 <body>
 <header>
 <h1>MicroVitality</h1>
-<p>Zdravé mikroklíčky plné vitality priamo k vám!</p>
+<p>Zdravá mikrozeleninka plná vitality priamo k vám!</p>
 </header>
 
 <nav>
