--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MicroVitality - Čerstvé Mikroklíčky</title>
+<title>MicroVitality - Čerstvá Mikrozeleninka </title>
 <style>
 * {
 margin: 0;
