--- a/index.html
+++ b/index.html
@@ -295,7 +295,14 @@ section { padding: 2rem 1rem; }
 
 <section id="o-nas">
 <h2>O nás</h2>
-<p>V MicroVitality pestujeme mikroklíčky s láskou a starostlivosťou. Naším cieľom je priniesť vám čerstvosť, zdravie a jedinečnú chuť priamo z prírody.</p>
+<p>V MicroVitality veríme, že zdravie začína na tanieri. Preto sa s láskou venujeme pestovaniu čerstvých, výživných a chutných microgreens – malých rastlín s veľkým množstvom vitamínov, minerálov a antioxidantov.
+
+Naša misia je jednoduchá: prinášať čerstvé a kvalitné microgreens priamo k vám, aby ste si mohli dopriať zdravie v každom súste. Pestujeme ich s maximálnou starostlivosťou, bez chemikálií a v dokonale kontrolovaných podmienkach, aby ste mali istotu, že dostávate len to najlepšie.
+
+Či už ste nadšenec zdravého životného štýlu, domáci kuchár alebo profesionálny šéfkuchár, naše microgreens dodajú vašim jedlám nielen skvelú chuť, ale aj extra dávku živín. Skúste ich pridať do šalátov, smoothie, sendvičov alebo ako štýlový doplnok na tanier – možnosti sú nekonečné!
+
+Ďakujeme, že podporujete lokálne pestovanie a zdravý životný štýl. Ak máte akékoľvek otázky alebo si chcete objednať, neváhajte nás kontaktovať!
+</p>
 </section>
 
 <section id="kontakt">
