--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ section { padding: 2rem 1rem; }
 </head>
 <body>
 <header>
-<h1>MicroVitality</h1>
+<h1>MicroVitality - Mikrozelenina od Lili</h1>
 <p>Zdravá mikrozeleninka plná vitality priamo k vám!</p>
 </header>
 
@@ -244,7 +244,7 @@ section { padding: 2rem 1rem; }
 
 <section id="domov">
 <h2>Vitajte v MicroVitality</h2>
-<p>Sme rodinná firma zameraná na pestovanie čerstvých mikroklíčkov, ktoré prinášajú zdravie a chuť do vašej kuchyne. Objavte silu prírody s nami!</p>
+<p>Sme lokálny pestovateľ čerstvých microgreens, ktoré prinášajú zdravie a skvelú chuť do vašej kuchyne. Pestujeme ich s dôrazom na kvalitu, čerstvosť a prírodný spôsob pestovania – bez pesticídov a umelých hnojív. Objavte silu prírody v každom súste!</p>
 </section>
 
 <section id="produkty">
