--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Naša misia je jednoduchá: prinášať čerstvé a kvalitné microgreens priamo
 <p>© 2025 MicroVitality. Všetky práva vyhradené.</p>
 <div class="social">
 <a href="#">Facebook</a>
-<a href="#">Instagram</a>
+<a href="https://www.instagram.com/microvitality/">Instagram</a>
 </div>
 </footer>
 
