--- a/index.html
+++ b/index.html
@@ -315,9 +315,10 @@ Naša misia je jednoduchá: prinášať čerstvé a kvalitné microgreens priamo
 <footer>
 <p>© 2025 MicroVitality. Všetky práva vyhradené.</p>
 <div class="social">
-<a href="#">Facebook</a>
-<a href="https://www.instagram.com/microvitality/">Instagram</a>
+<a href="https://www.facebook.com/profile.php?id=61572663232362" target="_blank">Facebook</a>
+<a href="https://www.instagram.com/microvitality" target="_blank">Instagram</a>
 </div>
+
 </footer>
 
 <script>
