--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MicroVitality - Čerstvá Mikrozeleninka </title>
 <link rel="icon" type="image/x-icon" href="favicon-new.ico">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Butterfly+Kids&display=swap" rel="stylesheet">
+
 <style>
 * {
 margin: 0;
@@ -249,7 +253,7 @@ section { padding: 2rem 1rem; }
 </section>
 
 <section id="produkty">
-<h2>Naše Mikroklíčky</h2>
+<h2>Naša Mikrozelenina</h2>
 <div class="microgreens-container">
 <div class="microgreen-card" data-modal="Hrášok-modal">
 <img src="Hrášok.jpg" alt="Hrášok">
