--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ padding: 0;
 box-sizing: border-box;
 font-family: 'Arial', sans-serif;
 }
+.folklor-font {
+font-family: 'Butterfly Kids', cursive;
+font-size: 1.8rem;
+color: #ffffff; /* Biela farba pre lepší kontrast na zelenom pozadí */
+}
 
 body {
 background: #f5f6f2;
