--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ section { padding: 2rem 1rem; }
 </head>
 <body>
 <header>
-<h1>MicroVitality - Mikrozelenina od Lili</h1>
+<h1>MicroVitality</h1>
+<h2 class="folklor-font">Mikrozelenina od Lili</h2>
 <p>Zdravá mikrozeleninka plná vitality priamo k vám!</p>
 </header>
 
