--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ nav ul li a:hover {
   color: #8bc34a;
 }
 
-/* Sections */
+/* Sekcie */
 section {
   padding: 4rem 2rem;
   text-align: center;
@@ -92,6 +92,19 @@ section h2 {
   color: #4caf50;
   margin-bottom: 2rem;
   animation: fadeIn 1s ease;
+}
+
+/* Video Container */
+.video-container {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  margin: 2rem auto;
+}
+.video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Microgreens Container */
@@ -234,6 +247,7 @@ footer .social a {
   section { padding: 2rem 1rem; }
   .microgreen-card { width: 100%; max-width: 300px; }
   .modal-content { width: 95%; }
+  .video-container { height: 200px; }
 }
 </style>
 </head>
@@ -256,6 +270,13 @@ footer .social a {
 <section id="domov">
   <h2>Vitajte v MicroVitality</h2>
   <p>Sme lokálny pestovateľ čerstvých microgreens, ktoré prinášajú zdravie a skvelú chuť do vašej kuchyne. Pestujeme ich s dôrazom na kvalitu, čerstvosť a prírodný spôsob pestovania – bez pesticídov a umelých hnojív. Objavte silu prírody v každom súste!</p>
+</section>
+
+<!-- Video okno -->
+<section id="video">
+  <div class="video-container">
+    <video src="video.mp4" autoplay loop muted playsinline></video>
+  </div>
 </section>
 
 <section id="produkty">
