--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ footer .social a {
   <div class="microgreens-container">
     <!-- Prvý rad (5 produktov) -->
     <div class="microgreen-card" data-modal="Hrášok-modal">
-      <img src="Hrášok.jpg" alt="Hrášok">
+      <img src="Pea.jpg" alt="Hrášok">
       <h3>Hrášok</h3>
       <p>Pikantná chuť pre šaláty a sendviče.</p>
     </div>
