--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@ footer .social a {
       <h3>Brokolica</h3>
       <p>Jemná a zdravá pochúťka.</p>
     </div>
-    <div class="microgreen-card" data-modal="bazalka-modal">
-      <img src="bazalka.jpg" alt="Bazalka">
-      <h3>Bazalka</h3>
-      <p>Vôňa a chuť, ktorá oživí každé jedlo.</p>
+    <div class="microgreen-card" data-modal="kalerab-modal">
+      <img src="kalerab.jpg" alt="Kaleráb">
+      <h3>Kaleráb</h3>
+      <p>Jemne sladkastý a osviežujúci, bohatý na živiny.</p>
     </div>
     <div class="microgreen-card" data-modal="meta-modal">
       <img src="meta.jpg" alt="Mäta">
