--- a/index.html
+++ b/index.html
@@ -303,10 +303,10 @@ footer .social a {
       <h3>Kaleráb</h3>
       <p>Jemne sladkastý a osviežujúci, bohatý na živiny.</p>
     </div>
-    <div class="microgreen-card" data-modal="meta-modal">
-      <img src="meta.jpg" alt="Mäta">
-      <h3>Mäta</h3>
-      <p>Osviežujúca a priaznivá pre trávenie.</p>
+    <div class="microgreen-card" data-modal="horcica-modal">
+      <img src="horcica.jpg" alt="Mäta">
+      <h3>Horčica</h3>
+      <p>Osviežujúca a jemne pikantná, plná chuti.</p>
     </div>
     
     <!-- Prerušenie, aby sa prvých 5 zobrazených na prvom riadku -->
