--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ footer .social a {
     <div class="microgreen-card" data-modal="Hrášok-modal">
       <img src="Pea.jpg" alt="Hrášok">
       <h3>Hrášok</h3>
-      <p>Pikantná chuť pre šaláty a sendviče.</p>
+      <p>Sladký a chrumkavý, plný sviežosti.</p>
     </div>
     <div class="microgreen-card" data-modal="redkovka-modal">
       <img src="redkovka.jpg" alt="Reďkovka">
