--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@ footer .social a {
     <div style="flex-basis: 100%; height: 0;"></div>
     
     <!-- Druhý rad (5 produktov) -->
-    <div class="microgreen-card" data-modal="koriander-modal">
-      <img src="koriander.jpg" alt="Koriander">
-      <h3>Koriander</h3>
-      <p>Detoxikačné a osviežujúce bylinky.</p>
+    <div class="microgreen-card" data-modal="rukola-modal">
+      <img src="rukola.jpg" alt="Rukola">
+      <h3>Rukola</h3>
+      <p>Jemne korenistá a osviežujúca, plná energie.</p>
     </div>
     <div class="microgreen-card" data-modal="rukola-modal">
       <img src="rukola.jpg" alt="Rukola">
