--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@ footer .social a {
       <h3>Rukola</h3>
       <p>Jemne korenistá a osviežujúca, plná energie.</p>
     </div>
-    <div class="microgreen-card" data-modal="rukola-modal">
-      <img src="rukola.jpg" alt="Rukola">
-      <h3>Rukola</h3>
-      <p>Plná vitamínov a minerálov, ideálna do šalátov.</p>
+    <div class="microgreen-card" data-modal="azia-modal">
+      <img src="azia.jpg" alt="azia">
+      <h3>Ázijská mikro zmes</h3>
+      <p>Objavte lahodnú umami chuť.</p>
     </div>
     <div class="microgreen-card" data-modal="spenat-modal">
       <img src="spenat.jpg" alt="Špenát">
