--- a/index.html
+++ b/index.html
@@ -319,14 +319,14 @@ footer .social a {
       <p>Jemne korenistá a osviežujúca, plná energie.</p>
     </div>
     <div class="microgreen-card" data-modal="azia-modal">
-      <img src="azia.jpg" alt="azia">
+      <img src="azia.jpg" alt="Ázia">
       <h3>Ázijská mikro zmes</h3>
       <p>Objavte lahodnú umami chuť.</p>
     </div>
-    <div class="microgreen-card" data-modal="spenat-modal">
-      <img src="spenat.jpg" alt="Špenát">
-      <h3>Špenát</h3>
-      <p>Bohatý na železo a vitamíny pre energiu.</p>
+    <div class="microgreen-card" data-modal="salat-modal">
+      <img src="salat.jpg" alt="Šalát">
+      <h3>Šalát</h3>
+      <p>Svieži a chrumkavý, plný vitality.</p>
     </div>
     <div class="microgreen-card" data-modal="petrzlen-modal">
       <img src="petrzlen.jpg" alt="Petržlen">
